# phyre

./: .gitattributes  .gitignore  .gitmodules  .yapfignore  CMakeLists.txt  CNAME  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  Makefile  README.md  env.yml  index.html  requirements.agents.txt  requirements.examples.txt
.circleci/: config.yml
agents/: OGRE.md  README.md  compare.py  download_dqn_ckps.sh  nets.py  neural_agent.py  offline_agents.py  run_experiment.py  run_experiment_tools.py  run_experiments_ogre.py  train.py  train_all_baseline.sh
css/: main.css
data/evaluations/: 00000.lzma  00000.meta.json  00001.lzma  00001.meta.json  00002.lzma  00002.meta.json  00003.lzma  00003.meta.json  00004.lzma  00004.meta.json  00005.lzma  00005.meta.json  00006.lzma  00006.meta.json  00007.lzma  00007.meta.json  00008.lzma  00008.meta.json  00009.lzma  00009.meta.json  00010.lzma  00010.meta.json  00011.lzma  00011.meta.json  00012.lzma  00012.meta.json  00013.lzma  00013.meta.json  00014.lzma  00014.meta.json  00015.lzma  00015.meta.json  00016.lzma  00016.meta.json  00017.lzma  00017.meta.json  00018.lzma  00018.meta.json  00019.lzma  00019.meta.json  (+140 more)
data/generated_tasks/: checksum.json  tasks.bin.lzma  tasks01.bin.lzma
data/solution_power/: 00000.lzma  00001.lzma  00002.lzma  00003.lzma  00004.lzma  00005.lzma  00006.lzma  00007.lzma  00008.lzma  00009.lzma  00010.lzma  00011.lzma  00012.lzma  00013.lzma  00014.lzma  00015.lzma  00016.lzma  00017.lzma  00018.lzma  00019.lzma  00020.lzma  00021.lzma  00022.lzma  00023.lzma  00024.lzma  00100.lzma  00101.lzma  00102.lzma  00103.lzma  00104.lzma  00105.lzma  00106.lzma  00107.lzma  00108.lzma  00109.lzma  00110.lzma  00111.lzma  00112.lzma  00113.lzma  00114.lzma  (+50 more)
data/task_scripts/main/: task00000.py  task00001.py  task00002.py  task00003.py  task00004.py  task00005.py  task00006.py  task00007.py  task00008.py  task00009.py  task00010.py  task00011.py  task00012.py  task00013.py  task00014.py  task00015.py  task00016.py  task00017.py  task00018.py  task00019.py  task00020.py  task00021.py  task00022.py  task00023.py  task00024.py  task00100.py  task00101.py  task00102.py  task00103.py  task00104.py  task00105.py  task00106.py  task00107.py  task00108.py  task00109.py  task00110.py  task00111.py  task00112.py  task00113.py  task00114.py  (+65 more)
data/task_scripts/tests/benchmark/: task00048.py
data/task_scripts/tests/task_validation/: task00001.py  task00002.py  task00003.py  task00004.py  task00005.py  task00006.py
data/task_scripts/tests/user_input/: task00045.py
data/virtual_tools/Original/: Chaining.json  Falling_A.json  Gap.json  Launch_A.json  Prevention_A.json  Shafts_A.json  Shafts_B.json  Table_A.json  Unsupport.json
docs/: .buildinfo  CREATOR.md  SIMULATOR.md  cache.html  evaluator.html  genindex.html  index.html  objects.inv  observations.html  py-modindex.html  search.html  searchindex.js  simulator.html  visualization.html
docs/_sources/: cache.rst.txt  evaluator.rst.txt  index.rst.txt  observations.rst.txt  simulator.rst.txt  visualization.rst.txt
en/: index.html
examples/: 01_phyre_intro.ipynb  02_memoized_agent.ipynb  test_converter.py
examples/VirtualTools/Original/: Basic.json  Bridge.json  Catapult.json  Falling_B.json  Launch_B.json  Prevention_B.json  SeeSaw.json  Table_B.json  Unbox.json
scripts/: build_phyre_wheels.sh  check_eval_stats_solutions.py  check_task_evaluation.py  clang_format_all.sh  generate_task_hash.py  render_converted_vt_tasks.py
scripts/offline_simulation/: compress_partial_simuations.py  save_action_space.py  save_partial_simulation.py
src/if/: scene.thrift  shared.thrift  task.thrift
src/python/: README.md  bruteforce_solutions_in_tier.py  setup.cfg  setup.py  setup.py.rej
src/python/phyre/: __init__.py  action_mappers.py  action_simulator.py  check_solutions.py  compute_solution_power.py  diversity.py  eval_task_complexity.py  generate_tasks.py  interface  loader.py  metrics.py  objects_util.py  server.py  settings.py  simulation.py  simulation_cache.py  simulator.py  util.py  virtual_tools.py  vis.py  viz_static_file
src/python/phyre/creator/: __init__.py  constants.py  creator.py  factories.py  shapes.py  vt_converter.py
src/python/phyre/tests/: action_simulator_test.py  creator_test.py  env_test.py  generated_tasks_test.py  metrics_test.py  objects_util_test.py  server_test.py  simulation_test.py  simulator_test.py
src/python/phyre/viz_server/: handler.py  server.py
src/simulator/: benchmark_box2d.cpp  benchmark_user_input_box2d.cpp  creator.cpp  creator.h  geometry.h  image_to_box2d.cpp  image_to_box2d.h  simulator_bindings.cpp  task_io.cpp  task_io.h  task_utils.cpp  task_utils.h  task_utils_parallel.cpp  task_validation.cpp  task_validation.h  thrift_box2d_conversion.cpp  thrift_box2d_conversion.h
src/simulator/tests/: test_backend.cpp  test_geometry.cpp  test_parallel_simulation.cpp  test_task_validation.cpp  test_user_input.cpp
src/simulator/tests/test_data/user_input/: buggy_input_task45.txt
src/simulator/utils/: logger.cpp  logger.h  timer.h
src/viz/: package-lock.json  package.json
src/viz/public/: gen-js  index.html  phyre_config.js
src/viz/src/: App.css  App.js  App.test.js  canvas.js  index.css  index.js  registerServiceWorker.js
website/: docusaurus.config.js
website/src/css/: custom.css
website/src/pages/: index.js  styles.module.css
